<resources>
    <!-- General -->
    <string name="app_name">Clexi</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Titles -->
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_search_for_login">Search Account</string>
    <string name="title_activity_account_details">Account Details</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_app_chooser">Choose Application</string>
    <string name="title_activity_password_generator">Generate Password</string>
    <string name="title_activity_connection_settings">Connection Settings</string>

    <!-- Controlls -->
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="new_">New</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="more_options">+More</string>
    <string name="less_options">-Less</string>

    <!-- Titles -->
    <string name="matching_logins">Matching Logins</string>

    <!-- Labels -->
    <string name="app">App</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="note">Note</string>
    <string name="generation_type">Generation type</string>
    <string name="normal">Normal</string>
    <string name="strong">Strong</string>
    <string name="custom">Custom</string>
    <string name="length">Length</string>
    <string name="other_options">Other options</string>
    <string name="use_characters">Use characters</string>
    <string name="use_digits">Use digits</string>
    <string name="begin_with_character">Begin with character</string>
    <string name="use_at_least_one_upercase_character">Use at least one upercase character</string>
    <string name="use_ambiguous_characters">Use ambiguous characters</string>

    <!-- Messages -->
    <string name="accessibility_service_description">This is a Accessibility Service description.</string>
    <string name="no_matching_logins">There is not any match for \'%s\'. Do you want to add a new one for that?</string>
    <string name="confirm_delete_account">Are you sure about delete \'%s\'?</string>
    <string name="confirm_assign_account">Are you sure about assign \'%s\' to this website or application?</string>
    <string name="no_paired_device">There is not any paired device.</string>
    <string name="no_available_device">There is not any available device.</string>
</resources>
