<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.PasswordGeneratorActivity"
    tools:showIn="@layout/activity_password_generator">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutGenerationType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="@string/generation_type"/>

                <RadioGroup
                    android:id="@+id/generationType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/generationTypeNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/normal"/>

                    <RadioButton
                        android:id="@+id/generationTypeStrong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/strong"/>

                    <RadioButton
                        android:id="@+id/generationTypeCustom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/custom"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPasswordLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/length"/>

                <EditText
                    android:id="@+id/passwordLength"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="center"
                    android:hint="8"
                    android:inputType="number"
                    android:maxLength="2"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="8"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOtherOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="@string/other_options"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbUseCharacters"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_characters"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbUseDigits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_digits"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbBeginWithCharacter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/begin_with_character"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbUpercaseCharacters"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_at_least_one_upercase_character"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbAmbiguousCharacter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_ambiguous_characters"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@{`@string/strong` + `:`}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/viewWeekPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/weekPass"/>

            <View
                android:id="@+id/viewNormalPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@color/normalPass"/>

            <View
                android:id="@+id/viewStrongPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
