<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginTop="0dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="1dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="false">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/matching_logins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textMedium"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/accountList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:visibility="visible"
            tools:listitem="@layout/item_account"/>

        <TextView
            android:id="@+id/emptyMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|left"
            android:padding="16dp"
            android:text="@string/no_matching_logins"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textMedium"
            android:visibility="gone"/>

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/close"
                android:textColor="@color/textMedium"/>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/search"
                android:textColor="@color/textMedium"/>

            <Button
                android:id="@+id/newButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/new_"
                android:textColor="@color/textMedium"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
