<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AccountDetailsActivity"
    tools:showIn="@layout/activity_account_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/appLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/appValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border_details"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/urlLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/urlValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/url"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border_details"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/usernameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border_details"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/passwordValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/passwordToggle"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right|center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_eye_strike"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border_details"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/noteLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/noteValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:minLines="1"
                android:scrollbars="vertical"
                android:text="@string/note"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
